k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wanderlust
  labels:
    app: wanderlust
    environment: production
