k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wanderlust-service
  namespace: wanderlust
  labels:
    app: wanderlust
spec:
  selector:
    app: wanderlust
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80          # port exposed on the Service
      targetPort: 8080  # port the container listens on
      nodePort: 30080   # accessible at <NodeIP>:30080  (range: 30000-32767)
